--- a/index.html
+++ b/index.html
@@ -1,58 +1,56 @@
+
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content=" width = device-width, initial-scale = 1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-
-    <title> To Do Application </title>
-
-
+    <title>To Do Application</title>
 </head>
-    
-<body>
-    <header>
-        <h1> To Do!</h1>
-        <label for="input-new-task" class="visuallyhidden"> Add new to do task:</label>
-        <input id="input-new-task"> </input>
-        <button>Add</button>
-    </header>
-    <main>
-        <p>You have 3 tasks left to complete</p>
-        
-        <section>
-            <h2>Tasks to do:</h2>
-            <ul>
-                <li>
-                    <p>This is a task that needs to be done</p>
-                    <button>Complete</button>
-                    <button>Delete</button>
-                </li>
-                <li>
-                    <p>This is a task that needs to be done</p>
-                    <button>Complete</button>
-                    <button>Delete</button>
-                </li>
-                <li>
-                    <p>This is a task that needs to be done</p>
-                    <button>Complete</button>
-                    <button>Delete</button>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2> Complete Tasks:</h2>
-            <ul>
-                <li>
-                    <p>This is a task that needs to be done</p>
-                    <button>Delete</button>
-                </li>
-                <li>
-                    <p>This is a task that needs to be done</p>
-                    <button>Delete</button>
-                </li>
-            </ul>
-        </section>
-    </main>
+<body class="body">
+<header class="header">
+    <h1 class="heading">To Do!</h1>
+    <div class="add-task__actions">
+        <label for="add-task-input" class="visuallyhidden">Add new to do task</label>
+        <input id="add-task-input" class="add-task__input-field"></input>
+        <button class="button">Add</button>
+    </div>
+    <p class="outstanding-tasks">You have 3 tasks to complete</p>
+</header>
+<main class="all-tasks">
+    <section class="incomplete-tasks">
+        <h2 class="heading">Tasks to do:</h2>
+        <ul class="task-list">
+            <li class="task">
+                <p class="task__text">This is a task that needs to be done</p>
+                <button class="button">Complete</button>
+                <button class="button">Delete</button>
+            </li>
+            <li class="task">
+                <p class="task__text">This is a task that needs to be done</p>
+                <button class="button">Complete</button>
+                <button class="button">Delete</button>
+            </li>
+            <li class="task">
+                <p class="task__text">This is a task that needs to be done</p>
+                <button class="button">Complete</button>
+                <button class="button">Delete</button>
+            </li>
+        </ul>
+    </section>
+    <section class="complete-tasks">
+        <h2 class="heading">Complete tasks:</h2>
+        <ul class="task-list">
+            <li class="task task--complete">
+                <p class="task__text">This is a task that needs to be done</p>
+                <button class="button">Delete</button>
+            </li>
+            <li class="task task--complete">
+                <p class="task__text">This is a task that needs to be done</p>
+                <button class="button">Delete</button>
+            </li>
+        </ul>
+    </section>
+</main>
 </body>
 </html>
